# greek_manuscripts

./: .dockerignore  .gitignore  Dockerfile  Hello.py  Makefile  README.md  TODO.md  accents_analyzer.py  analysis.py  cleaner.py  cleaner.sh  decoder.py  docxgenerator.py  html_generator.py  last_changes.py  main.py  normalizer.py  process.py  pyproject.toml  reference.py  requirements.txt
.github/workflows/: main.yml
html_templates/: input.css  interactive_document.html  output.css  tailwind.config.js
lib/: decoder.py  decoder_state.py  docxgenerator.py  logger.py  normalizer.py  reference.py  validator.py
lib/generators/: index.py
lib/interactive_document/: __init__.py
pages/: 1_📚_Converter.py  2_🔬_Analysis.py
tailwind_generator/: Dockerfile  Makefile
tests/: test_cesure.py  test_cleanup.py  test_order_of_words.py  test_reference.py  test_replacement.py
